--- a/ew_css/textstyles.css
+++ b/ew_css/textstyles.css
@@ -172,3 +172,7 @@ text-decoration: underline;
 word-wrap: break-word;}
 a.linkStyle_53:visited{color:#932091; text-decoration:underline;}
 a.linkStyle_53:hover{color:#FF2600; text-decoration:underline;}
+.Style56{font-family: 'Arial',sans-serif;
+font-size: 18px; 
+margin:0;
+word-wrap: break-word;}
