updated refs and linked to pre-print

--- a/ew_css/textstyles.css
+++ b/ew_css/textstyles.css
@@ -145,7 +145,7 @@ font-size: 18px;
 margin:0;
 color: #0432FF;
 word-wrap: break-word;}
-a.linkStyle_45:visited{color:#FEFB00; text-decoration:underline;}
+a.linkStyle_45:visited{color:#932091; text-decoration:underline;}
 a.linkStyle_45:hover{color:#FF2600; text-decoration:underline;}
 .linkStyle_48{font-family: 'Courier',monospace;
 font-size: 18px; 
