--- a/ew_css/textstyles.css
+++ b/ew_css/textstyles.css
@@ -168,3 +168,7 @@ text-decoration: underline;
 word-wrap: break-word;}
 a.linkStyle_52:visited{color:#932091; text-decoration:underline;}
 a.linkStyle_52:hover{color:#FF2600; text-decoration:underline;}
+.Style55{font-family: 'ArialMT','Arial',sans-serif;
+font-size: 18px; 
+font-style: italic;
+word-wrap: break-word;}
